2007-02-06  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_ReadGedcom.py: fix cal/est parsing
	* src/DisplayTabs/_ButtonTab.py: catch window already being open
	* example/gedcom/sample.ged: Add est/cal samples

2007-02-04  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_RelationView.py: default Relationship buttons to insenstive.
	Setting an active person will reenable them.

2007-02-03  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/NarrativeWeb.py: fix 0000894: syntax error on Narrative web plugin

2007-02-03  Don Allingham  <don@gramps-project.org>
	* src/DateHandler/_DateParser.py (DateParser.init_strings): fix date parsing to allow
	for spaces in numerical format. #892
	* src/Editors/_EditFamily.py (EditFamily.check_for_family_change): fix
	warning message.

2007-02-02  Don Allingham  <don@gramps-project.org>
	* src/Editors/_EditFamily.py (EditFamily.check_for_family_change): update on data change
	from family-update signal

2007-02-02  Alex Roitman  <shura@gramps-project.org>
	* src/plugins/WriteCD.py: Properly encode URI.

2007-02-02  Don Allingham  <don@gramps-project.org>
	* FAQ: update a bit.

2007-02-01  Piotr Czubaszek  <pioterus@gmail.com>
	* src/plugins/rel_pl.py: Update.

2007-02-01  Alex Roitman  <shura@gramps-project.org>
	* src/plugins/ChangeNames.py: Typo.

2007-01-30  Don Allingham  <don@gramps-project.org>
	* src/Editors/_EditFamily.py: catch family-delete signal

2007-01-30  Brian Matherly  <brian@gramps-project.org>
	* src/docgen/ODFDoc.py: add start_superscript and stop_superscript
	* src/docgen/KwordDoc.py: add start_superscript and stop_superscript
	* src/docgen/RTFDoc.py: add start_superscript and stop_superscript
	* src/docgen/HtmlDoc.py: add start_superscript and stop_superscript
	* src/docgen/OpenOfficeDoc.py: add start_superscript and stop_superscript
	* src/docgen/LaTeXDoc.py: add start_superscript and stop_superscript
	* src/plugins/IndivComplete.py: fix source citations (0000867)