@@ -1,3 +1,7 @@
+2007-02-06  Douglas Blank  <dblank@cs.brynmawr.edu>
+	* src/ReportBase/_ReportDialog.py: 0000905: Typo in catching exceptions in 
+	  buggy reports
+
 2007-02-06  Don Allingham  <don@gramps-project.org>
 	* src/GrampsDb/_ReadGedcom.py: fix cal/est parsing
 	* src/DisplayTabs/_ButtonTab.py: catch window already being open
